<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/postRecipeFragment"
    tools:context=".fragments.PostRecipeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

...
                android:text="@string/EnterName"
                android:textAlignment="textStart"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:labelFor="@+id/nameInput"/>

            <EditText
                android:id="@+id/nameInput"
                style="@style/Widget.AppCompat.AutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/post_recipe_margin"
                android:layout_marginEnd="@dimen/post_recipe_margin">

                <Button
                    android:id="@+id/buttonAddIngre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/plus"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
...
                android:layout_marginEnd="@dimen/post_recipe_margin"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/instruction0"
                    style="@style/Widget.AppCompat.AutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:hint="@string/hintInstr"
                    android:inputType="textMultiLine"
...

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/buttonAddInstr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/plus"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
...
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/EnterPersonNb"
                        android:textSize="15sp"
                        android:labelFor="@+id/personNbInput"/>

                    <EditText
                        android:id="@+id/personNbInput"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
...
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/EnterPrepTime"
                        android:textSize="15sp"
                        android:labelFor="@+id/prepTimeInput"/>

                    <EditText
                        android:id="@+id/prepTimeInput"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="49dp"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/EnterCookTime"
                        android:textSize="15sp"
                        android:labelFor="@+id/cookTimeInput"/>

                    <EditText
                        android:id="@+id/cookTimeInput"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
...
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <Button
                        android:id="@+id/miniature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/UploadMiniature"
                        app:autoSizeMaxTextSize="24sp"
                        app:autoSizeMinTextSize="8sp"
...
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/miniatureLayout"
                    app:layout_constraintTop_toTopOf="parent">

                    <Button
                        android:id="@+id/pictures"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/UploadPictures"
                        app:autoSizeMaxTextSize="24sp"
                        app:autoSizeMinTextSize="8sp"
...
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/postRecipePictures">

                <Button
                    android:id="@+id/postRecipe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/PostRecipe"
                    android:textSize="12sp"
...

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/post_recipe_spacing" />

            <TextView
                android:id="@+id/errorLogs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/post_recipe_margin"
                android:layout_marginTop="@dimen/post_recipe_margin"
                android:layout_marginEnd="@dimen/post_recipe_margin"
                android:layout_marginBottom="8dp"
...
