...
                        android:textSize="30sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/recipeImage" />

                    <TextView
                        android:id="@+id/ingredientsList"
                        android:layout_width="395dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="sans-serif-black"
...
                        android:textSize="30sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ingredientsList" />

                    <TextView
                        android:id="@+id/instructionsList"
                        android:layout_width="395dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="sans-serif-black"
...
