<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/Home" />

        <item
            android:id="@+id/nav_recipe"
            android:icon="@drawable/ic_create_black_24dp"
            android:title="@string/CreateRecipe" />

        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/ic_star_black_grey"
            android:title="@string/Favourites" />

        <item
            android:id="@+id/nav_subscriptions"
            android:icon="@drawable/ic_person_add_black_24dp"
            android:title="@string/Subscriptions" />

        <item
            android:id="@+id/nav_subscribers"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/Subscribers" />
    </group>
</menu>