...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ingredientField"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/ingredient0"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:fontFamily="sans-serif"
        android:hint="@string/EnterIngr"
...
        android:maxLength="2000"
        android:maxLines="20"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/quantity0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/quantity0"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
...
